feat(animated-banner):
Se crea una animación en texto e imagen como asset, se puede seguir mejorando

--- a/src/banner/banner.html
+++ b/src/banner/banner.html
@@ -3,12 +3,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="banner.css">
+        <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
       </head>
     <body>
         <div class="spacer"> </div>
-        <div class="cover">
+        <section class="cover">
             <img src="bg.jpg" alt="">
-        </div>
-        <div class="spacer"> </div>
+            <p id="first-sentence" class="absolute-row">EL futuro</p>
+            <p id="second-sentence" class="absolute-row">Hoy</p>
+        </section>
     </body>
 </html>
